--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,111 @@
-$primary-color: #444;
+@import 'config';
+@import 'menu';
 
+*{
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+}
 body{
     background: $primary-color;
+    color:$third-color;
+    height:100%;
+    margin:0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height:1.5;
 }
+
+h1,
+h2,
+h3{
+    margin: 0;
+    font-weight:400;
+
+    &.sl-name{
+        font-size:5rem;
+    }
+    &.sl-work{
+        margin:1rem 0rem;
+        background-color:$secondary-color;
+        color:$fourth-color;
+        padding:.5rem .2rem;
+    }
+}
+a{
+    color:$third-color;
+    text-decoration:none;
+}
+
+header{
+    position:fixed;
+    z-index:1100;
+    width:auto;
+    nav{
+        min-height:4rem;
+        width:auto;
+        background-color:$primary-color;
+        @include easein-out;
+        border-radius:2rem;
+        ul{
+            display:flex;
+            flex-wrap:wrap;
+            margin-left:5rem;
+            li{
+                list-style-type: none;
+                font-size: 2rem;
+                font-weight: 600;
+                margin-right: 4rem;
+                text-transform: capitalize;
+                height: 4rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                    a:hover{
+                    color:$fourth-color;    
+                    }
+                }
+        }
+        &.show{
+            display:block;
+            @include easein-out;
+        }
+        &.hide{
+            display:none;
+            @include easein-out;
+        }
+    }
+}
+
+#sl-profile{
+    padding: 4rem 5rem;
+    height:100vh;
+    // background: $home-image;
+    // background-attachment:fixed;
+    // background-size:100% 100%;
+    &::after {
+        content: ' ';
+        position: fixed; // instead of background-attachment
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: white;
+        background: $home-image;
+        background-size: 100% 100%;
+        will-change: transform; // creates a new paint layer
+        z-index: -1;
+    }
+            .sl-icons{
+                margin-top:1rem;
+            a{
+                padding: 0.4rem;
+
+                &:hover{
+                    color:$fourth-color;
+                    @include easein-out;
+                }
+            }
+        }
+}
+
+
