--- a/project/css/main.css
+++ b/project/css/main.css
@@ -139,14 +139,14 @@ h3 {
   h1.sl-name,
   h2.sl-name,
   h3.sl-name {
-    font-size: 5rem; }
-  h1.sl-work,
-  h2.sl-work,
-  h3.sl-work {
-    margin: 1rem 0rem;
-    background-color: #1f2833;
-    color: #66fcf1;
-    padding: .5rem .2rem; }
+    font-size: 5rem;
+    color: #1f2833; }
+
+.sl-work {
+  margin: 1rem 0rem;
+  background-color: #1f2833;
+  color: #66fcf1;
+  padding: .5rem .2rem; }
 
 a {
   color: #c5c6c7;
@@ -185,25 +185,48 @@ header {
       display: none;
       transition: all 0.5s ease-in-out; }
 
-#sl-profile {
-  padding: 4rem 5rem;
+#sl-background {
+  position: relative;
+  background: url(../images/table_bg1.jpg);
+  background-size: 100% 100%;
+  background-attachment: fixed;
+  overflow: hidden;
   height: 100vh; }
-  #sl-profile::after {
-    content: ' ';
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: white;
-    background: url(../images/homeImg.jpg);
+  #sl-background .sl-bg-computer {
+    background: url(../images/computer.png);
     background-size: 100% 100%;
-    will-change: transform;
-    z-index: -1; }
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -150px;
+    width: 500px;
+    height: 300px; }
+  #sl-background .sl-bg-cofee {
+    background: url(../images/cofee.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 25%;
+    top: 520px;
+    width: 276px;
+    height: 212px; }
+
+#sl-profile {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -175px; }
+  #sl-profile h3 {
+    color: #1f2833;
+    font-weight: 600; }
+  #sl-profile::after {
+    content: ''; }
   #sl-profile .sl-icons {
     margin-top: 1rem; }
     #sl-profile .sl-icons a {
-      padding: 0.4rem; }
+      padding: 0.4rem;
+      color: #1f2833; }
       #sl-profile .sl-icons a:hover {
         color: #66fcf1;
         transition: all 0.5s ease-in-out; }
