--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,16 +23,18 @@ h3{
 
     &.sl-name{
         font-size:5rem;
+        color:$secondary-color;
     }
-    &.sl-work{
-        margin:1rem 0rem;
-        background-color:$secondary-color;
-        color:$fourth-color;
-        padding:.5rem .2rem;
-    }
+}
+.sl-work{
+    margin:1rem 0rem;
+    background-color:$secondary-color;
+    color:$fourth-color;
+    padding:.5rem .2rem;
 }
 a{
     color:$third-color;
+
     text-decoration:none;
 }
 
@@ -60,8 +62,10 @@ header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                    a:hover{
-                    color:$fourth-color;    
+                    a{
+                        &:hover{
+                            color:$fourth-color;    
+                            }
                     }
                 }
         }
@@ -75,31 +79,65 @@ header{
         }
     }
 }
-
-#sl-profile{
-    padding: 4rem 5rem;
+#sl-background{
+    position: relative; // instead of background-attachment
+    background: $home-image;
+    background-size:100% 100%;
+    background-attachment:fixed;
+    overflow:hidden;
     height:100vh;
-    // background: $home-image;
-    // background-attachment:fixed;
-    // background-size:100% 100%;
+    .sl-bg-computer{
+        background:$computer-image;
+        background-size:100% 100%;
+        background-repeat:no-repeat;
+        position:absolute;
+        left:0;
+        top:50%;
+        margin-top:-150px;
+        width:500px;
+        height:300px;
+    }
+    .sl-bg-cofee{
+        background:$cofee-image;
+        background-size:100% 100%;
+        background-repeat:no-repeat;
+        position:absolute;
+        right:25%;
+        top: 520px;
+        width:276px;
+        height:212px;
+    }
+}
+#sl-profile{
+    // padding: 4rem 5rem;
+    // height:100vh;
+    position:absolute;
+    left:50%;
+    top:50%;  
+    margin-top: -175px;
+    h3{
+        color:$secondary-color;
+        font-weight:600;
+    }
     &::after {
-        content: ' ';
-        position: fixed; // instead of background-attachment
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: white;
-        background: $home-image;
-        background-size: 100% 100%;
-        will-change: transform; // creates a new paint layer
-        z-index: -1;
+        content: '';
+        // position: relative; // instead of background-attachment
+        // width: 100%;
+        // height: 100%;
+        // top: 0;
+        // left: 0;
+        // background-attachment:fixed;
+        // background-color: white;
+        // background: $home-image;
+        // background-size: 100% 100%;
+        // will-change: transform; // creates a new paint layer
+        // z-index: -1;
     }
             .sl-icons{
                 margin-top:1rem;
             a{
                 padding: 0.4rem;
-
+                color:$secondary-color;
                 &:hover{
                     color:$fourth-color;
                     @include easein-out;
