--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -35,23 +35,73 @@ $background-opacity: 0.9;
     }
 }
 
-.__san_profile_wrap {
+.__san_project_wrap {
     display: flex;
     background-color:$primary-color;
     
-    .__san_profile_ls {
+    .__san_project_ls {
         width: 40%;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
+        span{
+            font-size:3rem;
+            font-weight:600;
+            text-transform:uppercase;
+        }
     }
-    .__san_profile_rs {
+    .__san_project_rs {
         width: 60%;
         margin-left: auto;
-        div {
-            height: 80vh;
-            // background-color: $secondary-color;
+        .__san_project {
+            padding:1rem;
+            &:after{
+                content:" ";
+                height:.2em;
+                width:100%;
+                background-color:$fourth-color;
+                display: block;
+                margin-top: 2rem;
+            }
+            
+            h2{
+                margin-bottom:1rem;
+                text-transform:uppercase;
+                text-align:center;
+            }
+            .__san_project_item{
+                width:20rem;
+                height:15rem;
+                margin:0 auto;
+                img{
+                    width:100%;  
+                }
+                .__san_project_btn{
+                    margin-top:1rem;
+                    text-align:center;
+                    .button{
+                        color: $third-color;
+                        background-color: $secondary-color;
+                        border-color: #6c757d;
+                        padding:.5rem;
+                        border-radius:.8rem;
+                        cursor:pointer;
+                        text-transform:uppercase;
+                        font-weight:600;
+                        &:hover{
+                            color:$fourth-color;
+                        }
+                    }
+                }
+            }
+            // .__san_project_points{
+            //     ul{ 
+            //         li{
+
+            //          }
+            //      }
+            // }
         }
     }
 }
@@ -84,13 +134,21 @@ $background-opacity: 0.9;
             color:$primary-color;
             min-width:250px;
             margin-bottom:1rem;
-            padding:1em 0em;
+            padding:.5rem .3rem;
+            display:flex;
+            & span:nth-child(1){
+                flex:1
+            }
+            & span:nth-child(2){
+                flex:2;
+                align-self:center;
+            }
         }
     }
 
 }
 
-#sl-contact-from{
+#sl-contact-form{
     .sl-contact-heading{
         display:flex;
         width:100%;
@@ -125,6 +183,24 @@ $background-opacity: 0.9;
                 label{
                     color:$primary-color;
                     font-weight:600;
+                    text-transform:uppercase;
+                }
+            }
+            .form-list-button{
+                text-align:center;
+                padding-bottom:2rem;
+                button{
+                    font-size:100;
+                    border:none;
+                    background-color:$primary-color;
+                    padding:.5rem 2rem;
+                    color:$third-color;
+                    cursor:pointer;
+                    border-radius:2rem;
+                    &:hover{
+                        background-color:$secondary-color;
+                        color:$fifth-color;
+                    }
                 }
             }
         }
