--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -14,6 +14,8 @@ $background-opacity: 0.9;
 $layout-breakpoint-large: 960px;
 $layout-breakpoint-medium: 768px;
 $layout-breakpoint-small: 576px;
+$layout-breakpoint-xlarge:1250px;
+$layout-breakpoint-xxlarge:1400px;
 
 @mixin mainbackground{
 
