--- a/project/css/main.css
+++ b/project/css/main.css
@@ -97,7 +97,9 @@
 
 #sl-contact-form .sl-contact-heading {
   display: flex;
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 1rem; }
   #sl-contact-form .sl-contact-heading span {
     font-size: 3rem;
     font-weight: 700;
