--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -158,6 +158,8 @@ $layout-breakpoint-xxlarge:1400px;
     .sl-contact-heading{
         display:flex;
         width:100%;
+        margin-bottom:1rem;
+        margin-top:1rem;
         span{
             font-size:3rem;
             font-weight:700;
