--- a/project/css/main.css
+++ b/project/css/main.css
@@ -420,6 +420,8 @@ header {
       padding: 10%; } }
 
 @media (max-width: 576px) {
+  #sl-contact-form .sl-form-whole .sl-connect .sl-connect-items ul {
+    font-size: 1rem; }
   #sl-background .sl-bg-computer {
     display: none; }
   .__san_project_wrap .__san_project_rs {
